Add a configuration option to allow specifying the order packages are mirrored.
The default orders by name, other option is to sort by the package serial number.

--- a/src/bandersnatch/default.conf
+++ b/src/bandersnatch/default.conf
@@ -55,6 +55,10 @@ stop-on-error = false
 ; Number of consumers which verify metadata
 verifiers = 3
 
+; Order to sync packages when mirroring
+; allowed values are "name" or "serial"
+mirror_order = name
+
 ; blacklist
 ; List of PyPI packages not to sync - Useful if malicious packages are mirrored
 [blacklist]
